logs/django-merchant.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/billing'...
Listing './lib/python3.5/site-packages/billing/forms'...
Listing './lib/python3.5/site-packages/billing/gateways'...
Compiling './lib/python3.5/site-packages/billing/gateways/braintree_payments_gateway.py'...
***   File "./lib/python3.5/site-packages/billing/gateways/braintree_payments_gateway.py", line 352
    print ii.message
           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/billing/gateways/eway_gateway'...
Listing './lib/python3.5/site-packages/billing/gateways/eway_gateway/eway_api'...
Compiling './lib/python3.5/site-packages/billing/gateways/eway_gateway/eway_api/client.py'...
***   File "./lib/python3.5/site-packages/billing/gateways/eway_gateway/eway_api/client.py", line 231
    print wf
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/billing/gateways/eway_gateway/eway_api/tests.py'...
***   File "./lib/python3.5/site-packages/billing/gateways/eway_gateway/eway_api/tests.py", line 50
    print "create rebill customer", new_rebill_customer
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/billing/gateways/pay_pal_gateway.py'...
***   File "./lib/python3.5/site-packages/billing/gateways/pay_pal_gateway.py", line 85
    except PayPalFailure, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/billing/gateways/stripe_gateway.py'...
***   File "./lib/python3.5/site-packages/billing/gateways/stripe_gateway.py", line 41
    except self.stripe.CardError, error:
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/billing/gateways/we_pay_gateway.py'...
***   File "./lib/python3.5/site-packages/billing/gateways/we_pay_gateway.py", line 41
    except WePayError, error:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/billing/integrations'...
Listing './lib/python3.5/site-packages/billing/management'...
Listing './lib/python3.5/site-packages/billing/management/commands'...
Compiling './lib/python3.5/site-packages/billing/management/commands/check_billing_settings.py'...
***   File "./lib/python3.5/site-packages/billing/management/commands/check_billing_settings.py", line 39
    print '%s takes optional parameter %s' % (gateway, required_settings['optional'])
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/billing/models'...
Listing './lib/python3.5/site-packages/billing/templates'...
Listing './lib/python3.5/site-packages/billing/templates/billing'...
Listing './lib/python3.5/site-packages/billing/templates/billing/arb'...
Listing './lib/python3.5/site-packages/billing/templatetags'...
Listing './lib/python3.5/site-packages/billing/tests'...
Listing './lib/python3.5/site-packages/billing/utils'...
Listing './lib/python3.5/site-packages/django_merchant-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
